--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -2,5 +2,45 @@
   width: 100%;
   height: calc(100vh - 70px);
   top: 70px;
-  background-color: red;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://images.unsplash.com/photo-1472851294608-062f824d29cc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+  background-position: center;
+  background-size: contain;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  p {
+    margin-bottom: 30px;
+    font-size: 25px;
+    color: white;
+    letter-spacing: 2px;
+    font-style: italic;
+  }
+  .container {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    .main-item {
+      position: relative;
+      cursor: pointer;
+      img {
+        width: 250px;
+        height: 250px;
+        border-radius: 10px;
+        transition: all 0.5s ease-in-out;
+
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
+      .title {
+        position: absolute;
+        top: 100px;
+        right: 20px;
+        font-size: 18px;
+      }
+    }
+  }
 }
