worked on the images page. added a search button

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  background-color: white;
 
   .left {
     font-size: 30px;
