--- a/src/pages/imagesPage/images-page.scss
+++ b/src/pages/imagesPage/images-page.scss
@@ -1,18 +1,19 @@
 .images {
   width: 100%;
-  height: calc(100vh - 70px);
+  height: 100vh;
   top: 70px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("https://images.unsplash.com/photo-1528698827591-e19ccd7bc23d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=876&q=80");
   background-position: center;
   background-size: contain;
-  color: lightgray;
+
   .searchContainer {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
     margin-top: 30px;
+    color: lightgray;
 
     input {
       padding: 5px;
@@ -22,6 +23,9 @@
       &:focus {
         outline: none;
       }
+    }
+    label {
+      cursor: pointer;
     }
   }
 
@@ -40,6 +44,7 @@
       border-radius: 10px;
       overflow: hidden;
       cursor: pointer;
+      color: lightgray;
 
       img {
         height: 100px;
@@ -49,7 +54,16 @@
       }
       .actions {
         display: flex;
-        gap: 10px;
+        flex-direction: row;
+        gap: 30px;
+        cursor: pointer;
+
+        .download {
+          color: green;
+        }
+        .send {
+          color: #8294c4;
+        }
       }
     }
   }
