--- a/src/pages/imagesPage/images-page.scss
+++ b/src/pages/imagesPage/images-page.scss
@@ -46,13 +46,15 @@
       overflow: hidden;
       cursor: pointer;
       color: lightgray;
+      .link {
+        img {
+          height: 50px;
 
-      img {
-        height: 100px;
-        width: 100%;
-        object-fit: cover;
-        overflow: hidden;
+          object-fit: cover;
+          overflow: hidden;
+        }
       }
+
       .actions {
         display: flex;
         flex-direction: row;
