--- a/src/pages/pdfPage/pdf-page.scss
+++ b/src/pages/pdfPage/pdf-page.scss
@@ -6,6 +6,34 @@
     url("https://images.unsplash.com/photo-1528698827591-e19ccd7bc23d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=876&q=80");
   background-position: center;
   background-size: contain;
+  form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 50px;
+    gap: 20px;
+
+    input {
+      padding: 10px;
+      &:focus {
+        outline: none;
+      }
+    }
+    textarea {
+      padding: 10px;
+      &:focus {
+        outline: none;
+      }
+    }
+
+    button {
+      padding: 10px;
+      cursor: pointer;
+      border-radius: 5px;
+      outline: none;
+    }
+  }
 
   .searchContainer {
     display: flex;
