--- a/src/pages/emailVerify/email.scss
+++ b/src/pages/emailVerify/email.scss
@@ -5,7 +5,17 @@
   align-items: center;
   justify-content: center;
 
-  button {
-    padding: 5px;
+  .verified {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    .button {
+      padding: 10px;
+      margin-top: 10px;
+      background-color: green;
+      width: 100px;
+      color: white;
+    }
   }
 }
