--- a/src/pages/imagesPage/images-page.scss
+++ b/src/pages/imagesPage/images-page.scss
@@ -75,14 +75,12 @@
       overflow: hidden;
       cursor: pointer;
       color: lightgray;
-      .link {
-        width: 100%;
-        img {
-          height: 70px;
-          width: 100%;
-          object-fit: contain;
-          overflow: hidden;
-        }
+
+      img {
+        width: 300px;
+        height: 70px;
+
+        overflow: hidden;
       }
 
       .actions {
