made some changes

--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -13,7 +13,7 @@
 
   p {
     margin-bottom: 30px;
-    font-size: 25px;
+    font-size: 20px;
     color: white;
     letter-spacing: 2px;
     font-style: italic;
@@ -39,7 +39,14 @@
         position: absolute;
         top: 100px;
         right: 20px;
-        font-size: 18px;
+        font-size: 24px;
+        text-transform: capitalize;
+        text-align: center;
+        display: none;
+
+        &:hover {
+          display: block;
+        }
       }
     }
   }
