--- a/src/pages/videos-Page/videosPage.scss
+++ b/src/pages/videos-Page/videosPage.scss
@@ -61,8 +61,12 @@
   .videosContainer {
     padding: 20px;
     display: flex;
-    gap: 20px;
+
+    gap: 30px;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
 
     .video {
       height: 150px;
@@ -75,6 +79,13 @@
       overflow: hidden;
       cursor: pointer;
       color: lightgray;
+      span {
+        font-size: 14px;
+      }
+      p {
+        font-style: italic;
+      }
+
       .link {
         width: 100%;
         video {
