--- a/src/pages/imagesPage/images-page.scss
+++ b/src/pages/imagesPage/images-page.scss
@@ -61,8 +61,11 @@
   .imagesContainer {
     padding: 20px;
     display: flex;
-    gap: 20px;
+    gap: 30px;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
 
     .image {
       height: 150px;
@@ -75,6 +78,12 @@
       overflow: hidden;
       cursor: pointer;
       color: lightgray;
+      span {
+        font-size: 14px;
+      }
+      p {
+        font-style: italic;
+      }
 
       img {
         width: 300px;
