--- a/src/pages/singleImage/single-image.scss
+++ b/src/pages/singleImage/single-image.scss
@@ -7,7 +7,8 @@
   flex-direction: column;
 
   img {
-    height: 500px;
-    width: 800px;
+    width: 900px;
+    height: 600px;
+    object-fit: contain;
   }
 }
